--- a/C_Basic/C_Basic.vcxproj.filters
+++ b/C_Basic/C_Basic.vcxproj.filters
@@ -90,9 +90,6 @@
     <ClCompile Include="10998 A×B.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="105 출력_형성평가5.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
     <ClCompile Include="106 입력 형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
@@ -112,6 +109,12 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="112 연산자_형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="105 출력_형성평가5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="float_scope.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
