solve wrong answer input problem - Jungwol input problem no.110 - spareted flies

--- a/C_Basic/C_Basic.vcxproj.filters
+++ b/C_Basic/C_Basic.vcxproj.filters
@@ -15,106 +15,103 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="113 연산자_형성평가3.c">
+    <ClCompile Include="Jungwol\1000 A+B.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="114 연산자 형성평가4.c">
+    <ClCompile Include="Jungwol\1001 A-B.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="115 연산자 형성평가5.c">
+    <ClCompile Include="Jungwol\1008 A÷B.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="513 입력_자가진단5.c">
+    <ClCompile Include="Jungwol\10171 고양이.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="516 입력 자가진단8.c">
+    <ClCompile Include="Jungwol\10172 개.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="517 입력 자가진단9.c">
+    <ClCompile Include="Jungwol\10430 나머지.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="518 연산자_자가진단1.c">
+    <ClCompile Include="Jungwol\105 출력_형성평가5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="519 연산자_자가진단2.c">
+    <ClCompile Include="Jungwol\106 입력 형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="520 연산자 자가진단3.c">
+    <ClCompile Include="Jungwol\107 입력 형성평가2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="521 연산자 자가진단4.c">
+    <ClCompile Include="Jungwol\10718 We love kriii.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="522 연산자 자가진단5.c">
+    <ClCompile Include="Jungwol\108 입력 형성평가3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="523 연산자 자가진단6.c">
+    <ClCompile Include="Jungwol\10869 사칙연산.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="524 연산자 자가진단7.c">
+    <ClCompile Include="Jungwol\109 입력 형성평가4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="525 연산자 자가진단8.c">
+    <ClCompile Include="Jungwol\10998 A×B.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1000 A+B.c">
+    <ClCompile Include="Jungwol\110 입력 형성평가5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1001 A-B.c">
+    <ClCompile Include="Jungwol\111 연산자_형성평가1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1008 A÷B.c">
+    <ClCompile Include="Jungwol\112 연산자_형성평가2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2557 Hello World.c">
+    <ClCompile Include="Jungwol\113 연산자_형성평가3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2588 곱셈.c">
+    <ClCompile Include="Jungwol\114 연산자 형성평가4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10171 고양이.c">
+    <ClCompile Include="Jungwol\115 연산자 형성평가5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10172 개.c">
+    <ClCompile Include="Jungwol\2557 Hello World.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10430 나머지.c">
+    <ClCompile Include="Jungwol\2588 곱셈.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10718 We love kriii.c">
+    <ClCompile Include="Jungwol\513 입력_자가진단5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10869 사칙연산.c">
+    <ClCompile Include="Jungwol\516 입력 자가진단8.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10998 A×B.c">
+    <ClCompile Include="Jungwol\517 입력 자가진단9.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="106 입력 형성평가1.c">
+    <ClCompile Include="Jungwol\518 연산자_자가진단1.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="107 입력 형성평가2.c">
+    <ClCompile Include="Jungwol\519 연산자_자가진단2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="108 입력 형성평가3.c">
+    <ClCompile Include="Jungwol\520 연산자 자가진단3.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="109 입력 형성평가4.c">
+    <ClCompile Include="Jungwol\521 연산자 자가진단4.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="110 입력 형성평가5.c">
+    <ClCompile Include="Jungwol\522 연산자 자가진단5.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="111 연산자_형성평가1.c">
+    <ClCompile Include="Jungwol\523 연산자 자가진단6.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="112 연산자_형성평가2.c">
+    <ClCompile Include="Jungwol\524 연산자 자가진단7.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="105 출력_형성평가5.c">
-      <Filter>소스 파일</Filter>
-    </ClCompile>
-    <ClCompile Include="float_scope.cpp">
+    <ClCompile Include="Jungwol\525 연산자 자가진단8.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
