-added The conditional statement problems from Baekjoon. -all of The conditonal statement prblems from Jungol. ** code no.632 zzhang shi roomㅡㅡ

--- a/.gitignore
+++ b/.gitignore
@@ -348,3 +348,9 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+/C_Basic/Jungwol/527 디버깅 자가진단2.c
+/C_Basic/Jungwol/526 디버깅_자가진단1.c
+/C_Basic/Jungwol/119 디버깅 형성평가4.c
+/C_Basic/Jungwol/118 디버깅 형성평가3.c
+/C_Basic/Jungwol/117 디버깅 형성평가2.c
+/C_Basic/Jungwol/116 디버깅 형성평가1.c
