While loop<1> problems of Jungol. - code no. 539, 126 ; I got the wrong answer.

--- a/.gitignore
+++ b/.gitignore
@@ -354,3 +354,62 @@ MigrationBackup/
 /C_Basic/Jungwol/118 디버깅 형성평가3.c
 /C_Basic/Jungwol/117 디버깅 형성평가2.c
 /C_Basic/Jungwol/116 디버깅 형성평가1.c
+/C_Basic/Baekjun/9498_시험성적.c
+/C_Basic/Baekjun/2884_알람시계.c
+/C_Basic/Baekjun/275_윤년.c
+/C_Basic/Baekjun/2588_곱셈.c
+/C_Basic/Baekjun/2557_HelloWorld.c
+/C_Basic/Baekjun/14681_사분면고르기.c
+/C_Basic/Baekjun/1330_두수비교하기.c
+/C_Basic/Baekjun/10998_A×B.c
+/C_Basic/Baekjun/10869_사칙연산.c
+/C_Basic/Baekjun/10718_Welovekriii.c
+/C_Basic/Baekjun/10430_나머지.c
+/C_Basic/Baekjun/10172_개.c
+/C_Basic/Baekjun/10171_고양이.c
+/C_Basic/Baekjun/1008_A÷B.c
+/C_Basic/Baekjun/1001_A-B.c
+/C_Basic/Baekjun/1000_A+B.c
+/C_Basic/Baekjun
+/C_Basic/Jungwol/124_선택제어문_형성평가5.c
+/C_Basic/Jungwol/123_선택제어문_형성평가4.c
+/C_Basic/Jungwol/122_선택제어문_형성평가3.c
+/C_Basic/Jungwol/121_선택제어문_형성평가2.c
+/C_Basic/Jungwol/120_선택제어문_형성평가1.c
+/C_Basic/Jungwol/119_디버깅_형성평가4.c
+/C_Basic/Jungwol/118_디버깅_형성평가3.c
+/C_Basic/Jungwol/117_디버깅_형성평가2.c
+/C_Basic/Jungwol/116_디버깅_형성평가1.c
+/C_Basic/Jungwol/115_연산자_형성평가5.c
+/C_Basic/Jungwol/114_연산자_형성평가4.c
+/C_Basic/Jungwol/113_연산자_형성평가3.c
+/C_Basic/Jungwol/112_연산자_형성평가2.c
+/C_Basic/Jungwol/111_연산자_형성평가1.c
+/C_Basic/Jungwol/110_입력_형성평가5.c
+/C_Basic/Jungwol/109_입력_형성평가4.c
+/C_Basic/Jungwol/108_입력_형성평가3.c
+/C_Basic/Jungwol/107_입력_형성평가2.c
+/C_Basic/Jungwol/106_입력_형성평가1.c
+/C_Basic/Jungwol/105_출력_형성평가5.c
+/C_Basic/Jungwol/535_선택제어문_자가진단8.c
+/C_Basic/Jungwol/534_선택제어문_자가진단7.c
+/C_Basic/Jungwol/533_선택제어문_자가진단6.c
+/C_Basic/Jungwol/532_선택제어문_자가진단5.c
+/C_Basic/Jungwol/531_선택제어문_자가진단4.c
+/C_Basic/Jungwol/530_선택제어문_자가진단3.c
+/C_Basic/Jungwol/529_선택제어문_자가진단2.c
+/C_Basic/Jungwol/528_선택제어문_자가진단1.c
+/C_Basic/Jungwol/527_디버깅_자가진단2.c
+/C_Basic/Jungwol/526_디버깅_자가진단1.c
+/C_Basic/Jungwol/525_연산자_자가진단8.c
+/C_Basic/Jungwol/524_연산자_자가진단7.c
+/C_Basic/Jungwol/523_연산자_자가진단6.c
+/C_Basic/Jungwol/522_연산자_자가진단5.c
+/C_Basic/Jungwol/521_연산자_자가진단4.c
+/C_Basic/Jungwol/520_연산자_자가진단3.c
+/C_Basic/Jungwol/519_연산자_자가진단2.c
+/C_Basic/Jungwol/518_연산자_자가진단1.c
+/C_Basic/Jungwol/517_입력_자가진단9.c
+/C_Basic/Jungwol/516_입력_자가진단8.c
+/C_Basic/Jungwol/513_입력_자가진단5.c
+/C_Basic/Jungwol/632_선택제어문_자가진단9.c
