--- a/C_Basic/C_Basic.vcxproj.filters
+++ b/C_Basic/C_Basic.vcxproj.filters
@@ -186,5 +186,29 @@
     <ClCompile Include="14681 사분면 고르기.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="2884 알람시계.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="536_반복제어문1_자가진단1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="538_반복제어문1_자가진단3.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="537_반복제어문1_자가진단2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="540_반복제어문1_자가진단5.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="126_반복제어문1_형성평가2.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="125_반복제어문1_형성평가1.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="539_반복제어문1_자가진단4.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
