--- a/.gitignore
+++ b/.gitignore
@@ -413,3 +413,5 @@ MigrationBackup/
 /C_Basic/Jungwol/516_입력_자가진단8.c
 /C_Basic/Jungwol/513_입력_자가진단5.c
 /C_Basic/Jungwol/632_선택제어문_자가진단9.c
+/C_Basic/128_반복제어문1_형성평가4.c
+/C_Basic/127_반복제어문1_형성평가3.c
